# decisify

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DASHBOARD_SUMMARY.md  DEMO.md  DEPLOYMENT_REPORT.md  DOCKER.md  Dockerfile  HACKATHON_DEMO.md  IMPLEMENTATION_REPORT.md  LICENSE  Makefile  OPTIMIZATIONS.md  OPTIMIZATION_ANALYSIS.md  PROJECT_STRUCTURE.md  README.md  README.zh.md  ROADMAP.md  RUST_OPTIMIZATION.md  SCREENSHOT_GUIDE_QUICK.md  SUBMISSION.md  SUBMISSION_BRIEF.md  VERIFICATION.md  benchmark.py  benchmark_batch.py  benchmark_realistic.py  brain.py  brain_hybrid.py  build_rust.sh  coverage.xml  demo.py  demo.sh  docker-compose.yml  index.html  main.py  manifest.webmanifest  package-lock.json  pyproject.toml  pyproject.toml.backup  (+8 more)
.github/workflows/: ci.yml  deploy.yml  update-data.yml
assets/: chart-vendor-_mFZXGbA.js  data-DzKZjiyJ.json  icons-vendor-CINcoRNU.js  index-CxLgSzYt.css  index-DUOwoXBK.js  motion-vendor-BxMSmdBr.js  react-vendor-DQfslPF9.js
benchmarks/: benchmark.py  benchmark_batch.py  benchmark_realistic.py
dashboard/: .gitignore  HACKATHON_OPTIMIZATION.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  take-screenshots.js  vite.config.js
dashboard/public/: data.json  decision-history.json  error-logs.json  manifest.json  sw.js
dashboard/scripts/: generate-decision-history.js  generate-error-logs.js
dashboard/src/: App.enhanced.jsx  App.jsx  demo-mode.css  index.css  main.jsx
dashboard/src/components/: Accessibility.jsx  AgentThoughtLog.jsx  ContextMemory.jsx  DashboardEnhancements.jsx  DataSourceBadge.jsx  DecisionHistory.jsx  DemoControls.jsx  ErrorLogs.jsx  GuidedTour.jsx  Header.jsx  LightweightChart.jsx  LoadingComponents.jsx  LoadingState.jsx  LoadingStates.jsx  NautilusSnapshot.jsx  PerformanceMetrics.jsx  PolymarketTracker.jsx  RustPerformanceComparison.jsx  StrategyProposal.jsx  TriangulationMatrix.jsx  VisualComponents.jsx  VisualEffects.jsx  XIntelligenceFeed.jsx
dashboard/src/hooks/: useDataPolling.js  useDemoMode.js  useLiveDataSimulation.js  useResponsive.js
dashboard/src/utils/: dataSimulator.js  logger.js
docs/: API.md  ARCHITECTURE.md  DEMO_VIDEO_SCRIPT.md  FINAL_POLISH_REPORT.md  OPTIMIZATION_OPPORTUNITIES.md  QUICKSTART.md  SCREENSHOT_GUIDE.md
rust/: Cargo.toml
rust/src/: lib.rs
screenshots/: README.md
scripts/: ci_local.sh  fetch_data.py  generate_performance_report.py  take-screenshots.js
slides/: .gitignore  AUTO_VIDEO_GUIDE.md  README.md  VIDEO_RECORDING_GUIDE.md  VOICEOVER_SCRIPT.md  auto-record.py  generate-voiceover-cn.sh  global-bottom.vue  package-lock.json  package.json  slides.md  style.css  uno.config.ts
src/: brain.py  brain_hybrid.py  config.py  logger.py  metrics.py  safety.py  schemas.py  sensors.py  validate.py
tests/: test_brain.py  test_config.py  test_logger.py  test_metrics.py  test_safety.py  test_schemas.py  test_sensors.py
